--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
         <div class="frame frame2">
             <div class="scroll">
                 <p>
-                    We do not get to choose our families, but we do get to choose our friends. You have been closer than family to me. 
-                    On this day of your birth, I wish you every happiness and blessing. Congratulations! You grew up one more year. 
+                    We do not get to choose our families, but we do get to choose our friends. You have been closer as my family to me. 
+                    On coming day of your birth, I wish you every happiness and blessing. Congratulations! You will grew up one more year. 
                     Soon, you'll be 25, then 30, then 35, then 40 and so on. And, if things go right for you, then, in the meantime, 
                     you'll be achieving your goals, getting married, have kids, see your kids getting married and have grandchildren. 
                     And if you are lucky enough, you'll see your grandchildren marry as well 🤣.
-                    I just want you to know that you are a miracle that happened in my life. Not a day passes without me thanking God for giving me such a fantastic friend. I am fortunate to have met you in life. May all your heart's desires come true. You are not only a blessing to my life but a good friend worth having forever.
+                    I just want you to know that you are a miracle that happened in my life. Not a day passes without me thanking God for giving me such a fantastic sister. I am fortunate to have met you in life. May all your heart's desires come true. You are not only a blessing to my life but a good sister worth having forever.
                     Birthdays are not about presents, but being with friends & family that you love. I want you to know that I appreciate you. This was when it was raining when you were born because heaven was crying for losing an angel like you! Happy Birthday!
 
                     My birthday wishes for you: I hope the sun shines on you, the wind is at your back, your food tastes good, you see smiles and hear laughter every day but especially on your birthday.
